--- a/.github/workflows/fastbuild_6.6.89_mtk.yml
+++ b/.github/workflows/fastbuild_6.6.89_mtk.yml
@@ -7,6 +7,60 @@ env:
   KERNEL_NAME: 'android15-8-g29d86c5fc9dd-abogki428889875-4k'
 
 on:
+  workflow_call:
+    inputs:
+      ksu_type:
+        required: true
+        type: string
+        default: 'sukisu'
+      susfs_enable:
+        required: true
+        type: boolean
+        default: true
+      kpm_enable:
+        required: true
+        type: boolean
+        default: false
+      lz4_enable:
+        required: true
+        type: boolean
+        default: true
+      lz4kd_enable:
+        required: true
+        type: boolean
+        default: false
+      bbr_enable:
+        required: true
+        type: string
+        default: 'false'
+      better_net:
+        required: true
+        type: boolean
+        default: false
+      adios_enable:
+        required: true
+        type: boolean
+        default: true
+      rekernel_enable:
+        required: true
+        type: boolean
+        default: false
+      baseband_guard:
+        required: true
+        type: boolean
+        default: true
+      ccache_debug:
+        required: false
+        type: boolean
+        default: false
+      kernel_suffix:
+        required: false
+        type: string
+        default: ''
+      skip_release:
+        required: false
+        type: boolean
+        default: false
   workflow_dispatch:
     inputs:
       ksu_type:
@@ -23,22 +77,22 @@ on:
         description: '是否开启susfs(用于增强隐藏环境挂载功能; 可能轻微增加耗电，上游更新导致不稳定时或不需要可关闭)'
         required: true
         type: boolean
-        default: 'true'
+        default: true
       kpm_enable:
         description: '是否开启kpm(仅对sukisu生效; 可能轻微增加耗电，不需要可保持默认关闭)'
         required: true
         type: boolean
-        default: 'false'
+        default: false
       lz4_enable:
         description: '是否安装 lz4 1.10.0+zstd 1.5.7 补丁及 LZ4KD 补丁'
         required: true
         type: boolean
-        default: 'true'
+        default: true
       lz4kd_enable:
         description: '是否安装 LZ4KD 补丁(若已开启lz4+zstd补丁则可不开启)'
         required: true
         type: boolean
-        default: 'false'
+        default: false
       bbr_enable:
         description: "是否启用bbr算法(优化上行数据,对手机日用无太大意义甚至可能负优化;false关闭,true仅加入算法,default启用算法并设为默认)"
         required: true
@@ -52,27 +106,27 @@ on:
         description: '是否开启网络功能拓展配置(用于为ipset及需要iptables等高级网络功能内核支持的程序提供支持,天玑机型可能导致bug,建议关闭)'
         required: true
         type: boolean
-        default: 'false'
+        default: false
       adios_enable:
         description: '是否启用ADIOS IO调度器支持(提升IO读写性能)'
         required: true
         type: boolean
-        default: 'true'
+        default: true
       rekernel_enable:
         description: '是否启用Re-Kernel支持(与Freezer/NoActive等软件配合, 提升应用冻结能力)'
         required: true
         type: boolean
-        default: 'false'
+        default: false
       baseband_guard:
         description: '是否开启内核级基带保护(阻止一切对非用户分区的写入，有效防止格机)'
         required: true
         type: boolean
-        default: 'true'
+        default: true
       ccache_debug:
         description: '是否上传 Ccache调试日志(用于调试, 无需要不必开启)'
         required: true
         type: boolean
-        default: 'false'
+        default: false
       kernel_suffix:
         description: '内核后缀(留空默认,开头别加连字符,勿加空格等影响指令运行的保留字符)'
         required: false
@@ -728,9 +782,9 @@ jobs:
   release:
     needs: build
     runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'workflow_dispatch' && !inputs.skip_release }}
     permissions:
       contents: write
-      packages: write
       actions: read
       
     steps:
